--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "apexcharts": "3.41.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^12.9.2",
     "headlessui": "^0.0.0",
     "node-fetch": "3.3.0",
     "openai": "^4.55.3",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^6.26.2",
     "stripe": "11.15.0",
     "tailwind-merge": "^2.2.1",
