--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^12.9.2",
     "headlessui": "^0.0.0",
+    "lucide-react": "^0.507.0",
     "node-fetch": "3.3.0",
     "openai": "^4.55.3",
     "prettier": "3.1.1",
